Fucking LÆKKER TEX MAN

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -188,3 +188,50 @@
   publisher={IEEE},
   year={2015}
 }
+
+@article{mallow1973,
+  title={Some Comments on C P},
+  author={C. L. Mallows},
+  journal={Technometrics},
+  volume={15},
+  number={4},
+  pages={661-675},
+  year={1973},
+  publisher={American Statistical Association}
+}
+
+@article{akaike1973,
+  title={Information  theory  and  an  extension  of  the  maximum  likelihood  principle},
+  author={H. Akaike},
+  journal={Proceedings of the 2nd International Symposium Information Theory},
+  pages={267-281},
+  year={1973},
+  publisher={C. B. Petrov and F. Csaki, Eds.}
+}
+
+@article{schwarz1978,
+  title={Estimating the Dimensions of a Model},
+  author={Gideon Schwarz},
+  journal={The Annals of Statistics},
+  volume={6},
+  number={2},
+  pages={461-464},
+  year={1978},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{pearson1894,
+  title={Contributions to the mathematical theory of evolution},
+  author={K. Pearson},
+  pages={71-110},
+  year={1894},
+  publisher={Royal Society of London}
+}
+
+@book{legendre1805,
+author={Adrien-Marie Legendre},
+title={Nouvelles méthodes pour la détermination des orbites des comètes},
+year={1805},
+editor={F. didot}
+}
+
