--- a/latex/preface.tex
+++ b/latex/preface.tex
@@ -59,6 +59,7 @@
     hyperref=auto,
     backend=bibtex,
     sorting=ynt,
+    maxbibnames=99,
     style=alphabetic, %numeric
     citestyle=alphabetic %verboze
 ]{biblatex}
