--- a/latex/main.tex
+++ b/latex/main.tex
@@ -546,7 +546,20 @@ Som det ses af listing \ref{lst:function}, udregner vi først $ID$ for vores dat
 %[1] "MacKenzie's AIC = 75567.185218973"
 %[1] "Meyer's AIC = 75620.1633109145"
 % TODO: Indsæt tabel med de relative størrelser i stedet for plot
-Figur \ref{fig:plot_analysis_aic} viser AIC for de fire modeller. De fire modellers AIC er høje, men det er underordnet for vores analyse, da vi kigger på deres indbyrdes forhold. Det ses af figuren at Meyer's har den laveste AIC og derfor er den model der passer bedst til den indsamlede data. MacKenzie's og Fitt's følger herefter med lidt højere AIC værdier, mens Welford's er den klart dårligste af de fire modeller.
+Figur \ref{tab:table_analysis_aic} viser AIC for de fire modeller. De fire modellers AIC er høje, men det er underordnet da det afhænger af antallet af datapunkter, Det der derimod betyder noget er deres indbyrdes forhold. Det ses af tabellen at Meyer's har den laveste AIC og derfor er den model der passer bedst til den indsamlede data. MacKenzie's og Fitt's følger herefter med lidt højere AIC værdier, mens Welford's er den klart dårligste af de fire modeller. Vi har valgt at sætte Meyers AIC værdi som nulpunkt og så beregne forskellen til de andre herfra. 
+
+\begin{table}[h]
+\centering
+\begin{tabular}{ccc}
+Model & AIC værdi & Forskel\\
+Meyer & 94598.08 & 0 \\
+Mackenzie & 94649.26 & 51.18 \\
+Fitts & 94694.76 &96.68 \\
+Welford & 96060.29 & 1462.21
+\end{tabular}
+\caption{AIC værdier og indbyrdes forskel med udgangspunkt i Meyers som nulpunkt}
+\label{tab:table_analysis_aic}
+\end{table}
 
 \addcontentsline{toc}{subsection}{Residualanalyse}
 \subsection*{Residualanalyse}
@@ -576,6 +589,16 @@ For at få en ekstra vurdering af præcisionen af modellerne, har vi valgt at la
 På figur \ref{fig:plot_residual_fitt}, \ref{fig:plot_residual_welford}. \ref{fig:plot_residual_mackenzie} og \ref{fig:plot_residual_meyer} ses alle fire modellers residualplot, med en rød linje defineret af en smoothing-funktion. Smoothing-funktionen er tilføjet som et visuelt hjælpemiddel der tydeligt kan vise hvordan residualerne fordeler sig omkring x-aksen. Jo mere centreret de er om aksen, og jo mere linære de er i forhold til aksen, jo bedre er modellen.\\
 Når vi kigger på de fire residualplot, så viser de samme resultater som AIC-analysen. Welford's residualplot viser at modellen passer dårlig på den indsamlede data. Fitt's og MacKenzie's ligner hinanden meget, mens Meyer's er den model der giver den bedste fit til den indsamlede data.\\
 Det ses af figur \ref{fig:plot_residual_welford} at Welford's især er dårligere ved lavere værdier af $ID$. Grunden til dette skal findes i at Welford's ikke har det additive $a$-led. Som Welford \cite{welford1968} selv forklare, så vil det manglende $a$-led ikke gøre stor forskel ved større værdier af $ID$. Fitt's og MacKenzie's residualer ligner hinanden rigtig meget.
+
+\addcontentsline{toc}{section}{Modelanalyse af navigationsopgaver}
+\section*{Modelanalyse af navigationsopgaver}
+I vores forsøg havde vi, udover pegeopgaven, også tunnel- og spiralopgaver. Vi vil i dette afsnit forsøge at passe de fire formuleringer af Fitts lov på vores navigationsopgaver, velvidende, at det ikke er den en type opgaver de er beregnet til. Accot og Zhai har i deres artikel \cite{accot1997} undersøgt lignende navigationsopgaver og fundet $ID$ specifikt for både tunnel- og spiralopgaver, hvilket vi vil bruge til at sammenligne med de fire formuleringer.
+
+\addcontentsline{toc}{subsection}{Analyse af tunnelopgaver}
+\section*{Analyse af tunnelopgaver}
+
+\addcontentsline{toc}{subsection}{Analyse af spiralopgaver}
+\section*{Analyse af spiralopgaver}
 
 \addcontentsline{toc}{section}{Modelanalyse af hastighedsprofiler}
 \section*{Modelanalyse af hastighedsprofiler}
