tilføjet ... bla bla blaaaa.. jeg er træt nu!

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -584,9 +584,16 @@ Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvantitativ og 
 \addcontentsline{toc}{subsection}{Kvalitativ analyse}
 \subsection*{Kvalitativ analyse}
 Vi har valgt at udføre en kvalitativ af bevægelsesbanerne, da det vil give os et større overblik over den indsamlede data og vise os hvilke tendenser der kan observeres.
-Den kvalitative analyse bygger på 57 tilfældigt crowdsourcingdeltagerne, hvilket svare til cirka $21\%$ af deltagerne. Af de 57 deltagere angav 32 at de brugte mus, mens 25 angav at deres pegeredskab var touchpad. Vores observationer basere sig på bevægelsesbanerne for hver deltager, et eksempel herpå ses i figur ... .
+Den kvalitative analyse bygger på 57 tilfældigt crowdsourcingdeltagerne, hvilket svare til cirka $21\%$ af deltagerne. Af de 57 deltagere angav 32 at de brugte mus, mens 25 angav at deres pegeredskab var touchpad. Vores observationer basere sig på bevægelsesbanerne for hver deltager, et eksempel herpå ses i figur \ref{fig:movement_random_person}.
 
 Vi har observeret at deltagerne tager en stor underbevægelse, eventuelt opfulgt af mindre korrigerende underbevægelser. Typisk vil der for muse-brugerne være en korrigerende underbevægelse, mens touchpad-brugerne ofte bruger flere korrigerende underbevægelser. Generelt har muse-brugerne også mindre udsving i deres bevægelsesbaner end touchpad-brugerne. Dertil var der flere deltagere som startede enkelte baner, med at bevæge pegeredskabet i en forkert retning. 
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=.5\linewidth, trim = 0cm 0cm 7cm 0cm, clip]{images/plots/kvalitativ_analyse}
+\caption{Bevægelsesbaner for en tilfældig testdeltager.}
+\label{fig:movement_random_person}
+\end{figure}
 
 %\addcontentsline{toc}{chapter}{Konklusion}
 %\chapter*{Konklusion}
