--- a/latex/main.tex
+++ b/latex/main.tex
@@ -595,10 +595,77 @@ Det ses af figur \ref{fig:plot_residual_welford} at Welford's især er dårliger
 I vores forsøg havde vi, udover pegeopgaven, også tunnel- og spiralopgaver. Vi vil i dette afsnit forsøge at passe de fire formuleringer af Fitts lov på vores navigationsopgaver, velvidende, at det ikke er den en type opgaver de er beregnet til. Accot og Zhai har i deres artikel \cite{accot1997} undersøgt lignende navigationsopgaver og fundet $ID$ specifikt for både tunnel- og spiralopgaver, hvilket vi vil bruge til at sammenligne med de fire formuleringer.
 
 \addcontentsline{toc}{subsection}{Analyse af tunnelopgaver}
-\section*{Analyse af tunnelopgaver}
+\subsection*{Analyse af tunnelopgaver}
+De fire formuleringer er, som benævnt, ikke lavet til navigationsopgaver, vi har dog alligevel tilpasset en lineær model med deres respektive ID, til vores tunneldata. Vi har valgt afstanden, $A$, til at være længden på tunnellen, og breden, $W$, til at være størrelse på tunnelens udmunding.  De fire plots kan ses i figur \ref{fig:welford_tunnel_line}, \ref{fig:fitt_tunnel_line}, \ref{fig:mackenzie_tunnel_line} og \ref{fig:meyer_tunnel_line}
 
+Ligesom for pegeopgaven danner vores data én søjle for hvert $ID$, men sammenlignet de modeller fra pegeopgaven er forskellen på de fire navigationsmodeller umulig at få øje på. Accot og Zhai beskriver i deres artikel \cite{accot1997}, hvordan enindsnævrende tunnelopgave kan opdeles i små delelementer, som hver især udgør én lille navigationsopgave. Ved at gøre dette kan man finde $ID$ som summen af delelementernes $ID$, hvilket resulterer i $ID_{NT} = \frac{A}{W_2-W_1}\ln\left(\frac{W_2}{W_1}\right)$, hvor $W_2$ er størrelsen på udmundingen og $W_1$ er størrelsen på indmundingen. Dette giver anledning til $T=a+b\cdot ID_{NT}$. Tilpasses dette til vores data fås et plot som kan ses i figur \ref{fig:accot_tunnel_line}. 
+
+AIC analysen viser at Fitts' oprindelig formulering klarer sig bedst, dog er de indbyrdes forskelle voldsomt små i forhold til forskellene for pegeopgaven, men endnu én gang er Welfords den dårligst beskrivende formulering af vores data.
+
+\begin{table}[h]
+\centering
+\begin{tabular}{ccc}
+Model & AIC værdi & Forskel\\
+Fitts & 17668.53 & 0\\
+Mackenzie & 17668.56 & 0.3 \\
+Accot \& Zhai & 17669.07 & 0.54\\
+Meyer & 17669.50 & 0.87 \\
+Welford & 17679.18 & 10.65
+\end{tabular}
+\caption{AIC værdier og indbyrdes forskel med udgangspunkt i Welfords som nulpunkt}
+\label{tab:table_analysis_aic}
+\end{table}
+
+\begin{minipage}{\linewidth}
+	\begin{minipage}[b]{.50\linewidth}
+		\includegraphics[width=\textwidth]{images/plots/plot_tunnel_model_welford}
+		\captionof{figure}{Welfords}
+		\label{fig:welford_tunnel_line}
+	\end{minipage}
+	\begin{minipage}[b]{0.50\linewidth}
+		\includegraphics[width=\textwidth]{images/plots/plot_tunnel_model_fitt}
+		\captionof{figure}{Fitts}
+		\label{fig:fitt_tunnel_line}
+	\end{minipage}
+\end{minipage}
+\begin{minipage}{\linewidth}
+	\begin{minipage}[b]{.50\linewidth}
+		\includegraphics[width=\textwidth]{images/plots/plot_tunnel_model_meyer}
+		\captionof{figure}{Meyer}
+		\label{fig:meyer_tunnel_line}
+	\end{minipage}
+	\begin{minipage}[b]{0.50\linewidth}
+		\includegraphics[width=\textwidth]{images/plots/plot_tunnel_model_mackenzie}
+		\captionof{figure}{Mackenzie}
+		\label{fig:mackenzie_tunnel_line}
+	\end{minipage}
+	\begin{minipage}[b]{\linewidth}
+		\centering
+		\includegraphics[width=0.5\textwidth]{images/plots/plot_tunnel_model_accot}
+		\captionof{figure}{Accot \& Zhai}
+		\label{fig:accot_tunnel_line}
+	\end{minipage}
+\end{minipage}
+
+\newpage
 \addcontentsline{toc}{subsection}{Analyse af spiralopgaver}
-\section*{Analyse af spiralopgaver}
+\subsection*{Analyse af spiralopgaver}
+De to spiralmodeller er lavet på baggrund af Accot og Zhai's spiral og ses i figur \ref{fig:spiral_model_without} og \ref{spiral_model_with}.
+\begin{align*}
+ID_s = \int_{2\pi}^{2\pi(n+1)}\frac{\sqrt{\left(\theta+w\right)^6+9\left(\theta+w\right)4}}{\left(\theta+2\pi+2\right)^3-\left(\theta+w\right)^3}d\theta
+\end{align*}
+\begin{minipage}{\linewidth}
+	\begin{minipage}[b]{.50\linewidth}
+		\includegraphics[width=\textwidth]{images/plots/plot_spiral_model_without}
+		\captionof{figure}{Spiral model without additive}
+		\label{fig:spiral_model_without}
+	\end{minipage}
+	\begin{minipage}[b]{0.50\linewidth}
+		\includegraphics[width=\textwidth]{images/plots/plot_spiral_model_with}
+		\captionof{figure}{Spiral model with additive}
+		\label{fig:spiral_model_with}
+	\end{minipage}
+\end{minipage}
 
 \addcontentsline{toc}{section}{Modelanalyse af hastighedsprofiler}
 \section*{Modelanalyse af hastighedsprofiler}
@@ -611,6 +678,13 @@ Den kvalitative analyse bygger på 57 tilfældigt crowdsourcingdeltagerne, hvilk
 
 Vi har observeret at deltagerne tager en stor underbevægelse, eventuelt opfulgt af mindre korrigerende underbevægelser. Typisk vil der for muse-brugerne være en korrigerende underbevægelse, mens touchpad-brugerne ofte bruger flere korrigerende underbevægelser. Generelt har muse-brugerne også mindre udsving i deres bevægelsesbaner end touchpad-brugerne. Dertil var der flere deltagere som startede enkelte baner, med at bevæge pegeredskabet i en forkert retning. 
 
+\addcontentsline{toc}{subsection}{Kvantitativ analyse}
+\subsection*{Kvantitativ analyse}
+Dette afsnit og tilhørende figurer er tilføjet så du ved, hvor langt i processen med hastighedsprofilerne vi er.
+
+Vi har lavet fartprofiler for testdeltagerne, set i figur \ref{fig:plot_speed_overall}, som viser hvordan testdeltagerne foretager en hovedbevægelse, og herefter én eller flere koregerende bevægelser - vi har også individuelle plots hvoraf det måske er lidt tydligere.
+
+Vi har lavet hastighedsprofiler for testdeltagere, indtilvidere kun én enkelt opgave af gangen \ref{fig:plot_velocity_random} og kun i forhold til den reelle retning, dvs. vi mangler stadig hastighedsprofiler i mod målet.
 \begin{minipage}{\linewidth}
 	\begin{minipage}{.5\linewidth}
 		\centering
