renamed to uphold naming conventions

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -618,30 +618,30 @@ Welford & 17679.18 & 10.65
 
 \begin{minipage}{\linewidth}
 	\begin{minipage}[b]{.50\linewidth}
-		\includegraphics[width=\textwidth]{images/plots/plot_tunnel_model_welford}
+		\includegraphics[width=\textwidth]{images/plots/plot_model_tunnel_welford}
 		\captionof{figure}{Welfords}
 		\label{fig:welford_tunnel_line}
 	\end{minipage}
 	\begin{minipage}[b]{0.50\linewidth}
-		\includegraphics[width=\textwidth]{images/plots/plot_tunnel_model_fitt}
+		\includegraphics[width=\textwidth]{images/plots/plot_model_tunnel_fitt}
 		\captionof{figure}{Fitts}
 		\label{fig:fitt_tunnel_line}
 	\end{minipage}
 \end{minipage}
 \begin{minipage}{\linewidth}
 	\begin{minipage}[b]{.50\linewidth}
-		\includegraphics[width=\textwidth]{images/plots/plot_tunnel_model_meyer}
+		\includegraphics[width=\textwidth]{images/plots/plot_model_tunnel_meyer}
 		\captionof{figure}{Meyer}
 		\label{fig:meyer_tunnel_line}
 	\end{minipage}
 	\begin{minipage}[b]{0.50\linewidth}
-		\includegraphics[width=\textwidth]{images/plots/plot_tunnel_model_mackenzie}
+		\includegraphics[width=\textwidth]{images/plots/plot_model_tunnel_mackenzie}
 		\captionof{figure}{Mackenzie}
 		\label{fig:mackenzie_tunnel_line}
 	\end{minipage}
 	\begin{minipage}[b]{\linewidth}
 		\centering
-		\includegraphics[width=0.5\textwidth]{images/plots/plot_tunnel_model_accot}
+		\includegraphics[width=0.5\textwidth]{images/plots/plot_model_tunnel_accot}
 		\captionof{figure}{Accot \& Zhai}
 		\label{fig:accot_tunnel_line}
 	\end{minipage}
@@ -650,18 +650,18 @@ Welford & 17679.18 & 10.65
 \newpage
 \addcontentsline{toc}{subsection}{Analyse af spiralopgaver}
 \subsection*{Analyse af spiralopgaver}
-De to spiralmodeller er lavet på baggrund af Accot og Zhai's spiral og ses i figur \ref{fig:spiral_model_without} og \ref{spiral_model_with}.
+De to spiralmodeller er lavet på baggrund af Accot og Zhai's spiral og ses i figur \ref{fig:spiral_model_without} og \ref{fig:spiral_model_with}.
 \begin{align*}
 ID_s = \int_{2\pi}^{2\pi(n+1)}\frac{\sqrt{\left(\theta+w\right)^6+9\left(\theta+w\right)4}}{\left(\theta+2\pi+2\right)^3-\left(\theta+w\right)^3}d\theta
 \end{align*}
 \begin{minipage}{\linewidth}
 	\begin{minipage}[b]{.50\linewidth}
-		\includegraphics[width=\textwidth]{images/plots/plot_spiral_model_without}
+		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_without}
 		\captionof{figure}{Spiral model without additive}
 		\label{fig:spiral_model_without}
 	\end{minipage}
 	\begin{minipage}[b]{0.50\linewidth}
-		\includegraphics[width=\textwidth]{images/plots/plot_spiral_model_with}
+		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_with}
 		\captionof{figure}{Spiral model with additive}
 		\label{fig:spiral_model_with}
 	\end{minipage}
