--- a/latex/main.tex
+++ b/latex/main.tex
@@ -6,7 +6,52 @@
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
+
+\section*{Noter}
+Længere indledning! - meget længere.
+Heilmeiers katekisme - tre-fire første punkter passer perfekt til indledning.
+Skrive hvorfor vi gør det, hvad det kan bruges til.
+Hvad vi gør, hvordan gør vi det anderledes?
+\begin{itemize}
+	\item What are you trying to do? Articulate your objectives using absolutely no jargon.
+	\item How is it done today, and what are the limits of current practice?
+	\item What's new in your approach and why do you think it will be successful?
+	\item Who cares?
+	\item If you're successful, what difference will it make?
+\end{itemize}~\\
+
 I 1954 udgav Paul M. Fitts en artikel\footcite{fitts1954} som søgte at finde informationskapaciteten af det menneskelige motoriske system - og dermed en generel formulering for sammenhængen mellem distancen til og størrelsen af et mål i en motorisk opgave og den tid det tager at udføre opgaven. Fitts så et behov for et samlende begreb for den menneskelige motoriske kapacitet, grundet de tydelige problemer med at forene mange af de fakta, der var blevet beskrevet i tidligere litteratur. Hans forklaring var, at der var blevet overset en overordnet sammenhæng mellem amplituden, varigheden og variabiliteten i bevægelserne ved motoriske opgaver.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 \addcontentsline{toc}{chapter}{Teori}
 \chapter*{Teori}
