--- a/latex/preface.tex
+++ b/latex/preface.tex
@@ -54,14 +54,13 @@
 
 %-- Bibliography --%
 
-%\usepackage[backend=biber,style=verbose]{biblatex}
 \usepackage[
     hyperref=auto,
     backend=bibtex,
     sorting=ynt,
     maxbibnames=99,
-    style=alphabetic, %numeric
-    citestyle=alphabetic %verboze
+    style=alphabetic,
+    citestyle=alphabetic
 ]{biblatex}
 \bibliography{bibliography}
 
